# tusee-vue

./: .eslintrc.js  .gitignore  README.md  package-lock.json  package.json  vue.config.js
.github/workflows/: rust-audit-check.yml
database/setup/: 000-users-table.sql
docs/: 0000-POC.md  001-permissions.md
src/: main.ts
src/components/shared/: Navigation.vue
src/interfaces/: IRegistrationEnabled.ts  IUser.ts  IUserCreateResult.ts
src/locales/: en.json
src/repositories/: user.repository.ts
src/router/: index.ts
src/services/: user.service.ts
src/store/modules/: user.ts
src/styles/: colors.scss  general.scss  registration.scss
src/views/: Board.vue  Calendar.vue  Home.vue
src/views/user/: Login.vue  Profile.vue  Registration.vue
tusee-be/: Cargo.toml
tusee-be/src/: main.rs
tusee-be/src/user/: user.rs
tusee-be/src/utilities/: mod.rs  utilities.rs
tusee-fe/: README.md  nuxt.config.js  package-lock.json  package.json
tusee-fe/.github/: dependabot.yml
tusee-fe/src/: main.ts
tusee-fe/src/interfaces/: IUserFormData.ts
tusee-fe/src/repositories/: user.repository.ts
tusee-fe/src/router/: index.ts
tusee-fe/src/services/: user.service.ts
tusee-fe/src/styles/: main.scss  registration.scss
tusee-fe/src/views/: DesignSystem.vue
tusee-fe/src/views/user/: Login.vue  Profile.vue  Registration.vue
tusee-fe/tests/unit/services/: user.services.spec.ts
