[package]
name = "tusee-be"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
jsonwebtoken = "7"
serde = {version = "1.0", features = ["derive"] }
lettre = "0.10.0-rc.4"
postgres = "0.19.1"
postgres-types = { version = "0.2.1", features = ["derive"] }
actix-cors = "0.5.4"
envy = "0.4.2"
bcrypt = "0.10.1"